<resources>
    <string name="app_name">Bride of Christ Fellowship, Inc.</string>

    <string name="welcome">Welcome to the BofCF</string>
    <string name="home_page">
        The Bride of Christ Fellowship is a non-profit organization that allocates all donations to the community and those in need.
        \n\nWe strive to help our community in anyway we can. Please consider donating some extra supplies or signing up to volunteer!</string>
    <string name="copyright">\u00a9 2022 The Bride of Christ Fellowship, Inc.\n-- -- All Rights Reserved -- --</string>

    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="call_to_join">
        You can read about Our Work and get involved in our cause. You will discover that you will be part of something bigger than yourself.
        \n\nJoin us in this journey where we make an impact in people\'s lives. We have already helped thousands in different communities. Your support and help is and will always be welcome. Any contribution matters - small or big. Start today and be blessed.
    </string>
    <string name="about">
        The Bride of Christ Fellowship is a small town church that serves their community in a number of ways. Their primary concern is to provide support for families and people in need by hosting food drives, clothing drives, and giving away essential items.
        \n\nThe church consists of less than 50 members, so new volunteers are always more than welcomed. They have helped out countless families and individuals in the community and plan to continue at a larger scale.

        We have collaborated with the Bride of Christ Fellowship and formed a non-profit in an effort to facilitate the work they do for their community. The church\'s dedication and the morals they stand for make it obvious why we wanted to work with them.
        \n\nOur goal is to help the church add some structure to their processes and give them solutions to any problems they may face.
        \n\nBy working with the church, we have been able to provide them with risk analysis, a structured way of receiving and storing donations, quality control methods to make sure donations are safe, and an organization that the community can rely on.

        \n\nThe Team:
            \n\n \- Lucas Fletcher
            \n \- Massinissa Oukali
            \n \- Pemphyle Nzuzi
        \n\nBecause of our collaboration, we are able to provide the church with tools that make the jobs they do that much easier.
        \n\nOne of the church\'s main activities is donating supplies to the community; anything from food, water, toys, or any essential items.
        \n\nProviding them with a website allows them to keep track of the donations they are receiving and accept more people to volunteer.
    </string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="thank_you_donation">Thank you very much for your donation.</string>
    <string name="quote">May Jesus remember you.</string>
    <string name="our_work_1">Giving to those in need is one of the church\'s top priorities with the community. It\'s our pleasure to help out in ways such as giving out food to the homeless or families in need.
        \n\nYou can help out and get involved by filling out the form on the volunteer page!</string>
    <string name="our_work_2">Since clothing is the most common donation we get, we make sure that everyone who needs clothing can get it, with no limit on how much you can take!
        \n\nThis is one of the main ways we are able to help out our community.</string>
    <string name="our_work_3">It\'s important that the kids are also involved with receiving donations and is especially important to us around the holiday season. All toys are inspected for choking hazards and defects before given away.
        \n\nConsider donating if you have any spare toys! Your donation will go a long way.</string>
    <string name="our_work_4">Technology is now a part of almost everybody\'s lives, and is almost necessary to function in today\'s society.
        \n\nWe make sure that donated electronic devices are wiped of any existing data, contains no malware, and is given to those who need it.</string>


    <!-- Settings elements -->
    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="remind_for_bed_time">Remind me for bed time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>
    <string name="stream_video">Only stream HD video on Wi-Fi</string>
    <string name="limit_mobile_usage">Limit mobile data usage</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="pref_seek_val">pref_seek_val</string>
    <string name="seconds">seconds</string>
    <string name="uploads">Uploads</string>
    <string name="pref_uploads">pref_uploads</string>
    <string name="specify_network_prefs">Specify network preferences for uploads</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="restricted_mode">Restricted Mode can help to hide videos with potentially mature content.No filter is 100% accurate, but it should help you to avoid most of this type of content.</string>
    <string name="restricted_mode_description">Restricted Mode</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>

    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>

    <string-array name="pref_remind_me_to_take_a_break">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="pref_seek_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_uploads">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
</resources>